--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "johnny-five": "^1.4.0",
-    "socket.io": "^2.3.0"
+    "mongoose": "^5.9.9",
+    "socket.io": "^2.3.0",
+    "twilio": "^3.42.2"
   },
   "description": ""
 }
